exports[`invalid(1): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}}
    |                                                      ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {}}

`;

exports[`invalid(2): {\"dependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(2): {\"dependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                           ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {}}

`;

exports[`invalid(3): {\"dependencies\": {\"a\": \"1.0.0\", \"b\": \"1.0.0\"}, \"devDependencies\": {\"b\": \"2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {"b": "2.0.0"}}

`;

exports[`invalid(3): {\"dependencies\": {\"a\": \"1.0.0\", \"b\": \"1.0.0\"}, \"devDependencies\": {\"b\": \"2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {"b": "2.0.0"}}
    |                                                                    ^^^ \`b\` is already listed in \`dependencies\`.

Suggestion 1/1: Remove the duplicate \`b\` from \`devDependencies\`.:
  1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                      ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 3`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                                                              ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {}}

`;

exports[`invalid(5): {\"dependencies\": {\"a\": \"^7.0.0\"}, \"devDependencies\": {\"a\": \"^6.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "^7.0.0"}, "devDependencies": {"a": "^6.0.0"}}

`;

exports[`invalid(5): {\"dependencies\": {\"a\": \"^7.0.0\"}, \"devDependencies\": {\"a\": \"^6.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "^7.0.0"}, "devDependencies": {"a": "^6.0.0"}}
    |                                                       ^^^ \`a\` is already listed in \`dependencies\`.

Suggestion 1/1: Remove the duplicate \`a\` from \`devDependencies\`.:
  1 | {"dependencies": {"a": "^7.0.0"}, "devDependencies": {}}

`;

exports[`invalid(6): {\"dependencies\": {\"a\": \"^1.0.0\"}, \"optionalDependencies\": {\"a\": \"~1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "^1.0.0"}, "optionalDependencies": {"a": "~1.0.0"}}

`;

exports[`invalid(6): {\"dependencies\": {\"a\": \"^1.0.0\"}, \"optionalDependencies\": {\"a\": \"~1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "^1.0.0"}, "optionalDependencies": {"a": "~1.0.0"}}
    |                                                            ^^^ \`a\` is already listed in \`dependencies\`.

Suggestion 1/1: Remove the duplicate \`a\` from \`optionalDependencies\`.:
  1 | {"dependencies": {"a": "^1.0.0"}, "optionalDependencies": {}}

`;

exports[`invalid(7): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": 1}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": 1}}

`;

exports[`invalid(7): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": 1}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": 1}}
    |                                                      ^^^ \`a\` is already listed in \`dependencies\`.

Suggestion 1/1: Remove the duplicate \`a\` from \`devDependencies\`.:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {}}

`;
